--- a/WebsiteCrawler/WebsiteCrawler.csproj
+++ b/WebsiteCrawler/WebsiteCrawler.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="HtmlAgilityPack" Version="1.11.65" />
+      <PackageReference Include="Textify" Version="0.2.0-beta" />
     </ItemGroup>
 
 </Project>
