--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -25,7 +25,8 @@ jobs:
         run: dotnet build --configuration Release --no-restore
 
       - name: Pack NuGet package
-        run: dotnet pack WebsiteCrawler/WebsiteCrawler.csproj --configuration Release --output ./WebsiteCrawler/bin/Release --properties Version=${{ github.run_number }}
+        run: dotnet pack WebsiteCrawler/WebsiteCrawler.csproj --configuration Release --output ./WebsiteCrawler/bin/Release -p:Version=${{ github.run_number }}
+
 
       - name: Publish NuGet package
         run: dotnet nuget push ./WebsiteCrawler/bin/Release/*.nupkg --source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json --api-key ${{ secrets.GITHUB_TOKEN }}
